# rust-postgres

./: Cargo.toml  README.md
doc/v0.11.11/: search-index.js
doc/v0.11.11/postgres/: enum.ConnectTarget.html  enum.SslMode.html  fn.cancel_query.html  index.html  macro.accepts!.html  macro.to_sql_checked!.html  struct.CancelData.html  struct.ConnectParams.html  struct.Connection.html  struct.LoggingNoticeHandler.html  struct.UserInfo.html  trait.GenericConnection.html  trait.HandleNotice.html  trait.IntoConnectParams.html  type.Result.html
doc/v0.12.0/: search-index.js
doc/v0.12.0/postgres/: enum.TlsMode.html  fn.cancel_query.html  index.html  macro.accepts!.html  macro.to_sql_checked!.html  struct.CancelData.html  struct.Connection.html  struct.LoggingNoticeHandler.html  trait.GenericConnection.html  trait.HandleNotice.html  type.Result.html
doc/v0.13.0/: search-index.js
doc/v0.13.0/postgres/: enum.TlsMode.html  fn.cancel_query.html  index.html  macro.accepts!.html  macro.to_sql_checked!.html  sidebar-items.js  struct.CancelData.html  struct.Connection.html  struct.LoggingNoticeHandler.html  trait.GenericConnection.html  trait.HandleNotice.html  type.Result.html
doc/v0.13.1/postgres/: index.html  macro.accepts.html  (+4 more)
doc/v0.13.2/: search-index.js
doc/v0.13.3/: search-index.js
postgres/: Cargo.toml
postgres-derive/: Cargo.toml
postgres-derive-test/: Cargo.toml
postgres-native-tls/: Cargo.toml
postgres-protocol/: Cargo.toml
postgres-types/: Cargo.toml
postgres-types/src/: lib.rs
postgres/src/: config.rs
tokio-postgres/: Cargo.toml
tokio-postgres/src/: client.rs  config.rs  connect_raw.rs  prepare.rs  query.rs  statement.rs
(+495 files in other folders)
