[package]
name = "prisma-postgres-derive-test"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>", "Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

[dev-dependencies]
trybuild = "1.0"

prisma-postgres-types = { path = "../postgres-types", features = ["derive"] }
prisma-postgres = { path = "../postgres" }
