[package]
name = "prisma-postgres-derive"
version = "0.4.0"
authors = ["Steven Fackler <sfackler@gmail.com>", "Julius de Bruijn <bruijn@prisma.io>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "An internal crate used by postgres-types"
repository = "https://github.com/pimeys/rust-postgres"

[lib]
proc-macro = true
test = false

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
